--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -1,6 +1,6 @@
 <div class="results">
     <div class="row home-header">
-      <div class="col-md-12 pic">
+      <div class="col-md-8 pic">
         <div class="panel">
         </div>
       </div>
@@ -30,7 +30,7 @@
             </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 flex">
         <div class="panel right">
             <h1>About results</h1>
             <p>For more questions or a press release about this results page, please contact the Aid Data RVO Team.</p>
