--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -1,10 +1,10 @@
 <div class="pad-helper"></div>
 
-<div class="filters-fixed">
+<div class="filters-fixed" id="filter-bar">
 
   <div class="bg-wrap">
 
-    <div class="container extra">
+    <div class="container-fixed">
 
       <div class="row actions">
 
