--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -5,7 +5,7 @@
         </div>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-sm-12 col-md-8">
         <div class="panel transparent">
             <div class="row">
                 <div class="col-md-12">
@@ -30,7 +30,7 @@
             </div>
         </div>
       </div>
-      <div class="col-md-4 flex">
+      <div class="col-sm-12 col-md-4 flex">
         <div class="panel right">
             <h1>About results</h1>
             <p>For more questions or a press release about this results page, please contact the Aid Data RVO Team.</p>
