--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -1,6 +1,5 @@
 <div class="filter-panel">
-    <div class="container">
-		<div class="extra-padding">
+	<div class="filter-container-fixed">
 			<div class="row" ng-show="vm.activityStatuses.length == 0">
 				<div class="svg-loader">
 					<img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
@@ -37,5 +36,4 @@
 				</div>
 			</div>
 		</div>
-	</div>
 </div>
