--- a/templates/filters/filter-panel-recipient-countries.html
+++ b/templates/filters/filter-panel-recipient-countries.html
@@ -1,6 +1,5 @@
 <div class="filter-panel">
-	<div class="container">
-		<div class="extra-padding">
+	<div class="filter-container-fixed">
 			<div class="row filter-panel-header-wrapper">
 				<div class="col-md-4">
 					<div class="search-box">
@@ -58,6 +57,5 @@
 						on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
 				</div>
 			</div>
-		</div>
 	</div>
 </div>
