--- a/templates/filters/filter-panel-budget.html
+++ b/templates/filters/filter-panel-budget.html
@@ -1,6 +1,5 @@
 <div class="filter-panel budget">
-    <div class="container">
-		<div class="extra-padding">
+	<div class="filter-container-fixed">
 			<div class="checkbox">
 				<label class="switch">
 					<input type="checkbox" ng-model="vm.on"><i></i>
@@ -29,6 +28,5 @@
 				</slider>
 			</div>
 			<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
-		</div>
 	</div>
  </div>
