--- a/templates/filters/filter-panel-programmes.html
+++ b/templates/filters/filter-panel-programmes.html
@@ -1,6 +1,5 @@
 <div class="filter-panel">
-    <div class="container">
-        <div class="extra-padding">
+    <div class="filter-container-fixed">
             <div class="row" ng-show="vm.programmes.length == 0">
                 <div class="svg-loader">
                     <img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
@@ -44,6 +43,5 @@
                         on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
                 </div>
             </div>
-        </div>
     </div>
 </div>
