--- a/templates/filters/filter-panel-search.html
+++ b/templates/filters/filter-panel-search.html
@@ -1,6 +1,5 @@
 <div class="filter-panel">
-    <div class="container">
-        <div class="extra-padding">
+    <div class="filter-container-fixed">
             <div class="row filter-panel-header-wrapper">
                 <div class="col-md-6">
                     <div class="search-box keywords">
@@ -15,6 +14,5 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
  </div>
