thousand separator chart, popup chart, styling fix dropdown

--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -1,5 +1,5 @@
 
-  <div class="row">
+  <div class="row list-view-wrapper">
       <div class="col-md-12">
           <div class="sort">
               <span class="sort-by">Sort by: </span>
