--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -15,7 +15,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row list-view-wrapper">
     <div class="col-md-12">
         <div class="sort">
             <span class="sort-by">Sort by: </span>
