--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -182,11 +182,11 @@
             </div>
         </div>
     </div>
-
+<!-- 
     <div ng-if="vm.selectedTab == 'results'">
         <results programme-id="{{vm.programmeId}}"></results>
         
-    </div>
+    </div> -->
 </div>
 
 
