result page fixes

--- a/templates/results/results-table.html
+++ b/templates/results/results-table.html
@@ -39,7 +39,7 @@
 		</script>
 
 		<div class="fake-table" ng-show="vm.resultIndicators.length != 0">
-
+		<h4 class="table-head">Result data from 2015</h4>
 		    <div class="results body" 
 		        ng-repeat="item in vm.resultIndicators"
 		        ng-include="'result-tree'"
