--- a/templates/results/results-project-list.html
+++ b/templates/results/results-project-list.html
@@ -36,7 +36,7 @@
               <th>Programme</th>
               <th>Type</th>
               <th>Indicator title</th>
-              <th>Description</th>
+              <th width="15%">Description</th>
               <th>Baseline</th>
               <th>Actual</th>
               <th>Target</th>
