--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -58,15 +58,16 @@
         </div>
     </div>
     <div class="row">
-            <div class="container xlight bottom-hr">
-                <div class="col-md-6">
-                    <results-table selected-group="vm.selectedGroup" indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-table>
-                </div>
-                <div class="col-md-6">
-                    <results-chart indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-chart>
-                </div>
+        <div class="container xlight bottom-hr">
+            <div class="col-md-6">
+                <results-table selected-group="vm.selectedGroup" indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-table>
+            </div>
+            <div class="col-md-6">
+                <h4>Result data from {{vm.resultsYear.on ? vm.resultsYear.value : '2015 and 2016'}}</h4>
+                <results-chart indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-chart>
             </div>
         </div>
+    </div>
 <!--     <div class="row">
         <div class="col-sm-12">
             <div class="front-callout">
