order by recipient country

--- a/templates/activities/activity-list.html
+++ b/templates/activities/activity-list.html
@@ -9,6 +9,8 @@
                     ng-change="vm.toggleOrder()">
                     <option value="title">Title (A-Z)</option>
                     <option value="-title">Title (Z-A)</option>
+                    <option value="recipient_country">Recipient country (A-Z)</option>
+                    <option value="-recipient_country">Recipient country (Z-A)</option>
                     <!-- <option value="start_actual">Starting date (increasing)</option>
                     <option value="-start_actual">Starting date (decreasing)</option> -->
                     <option value="activity_incoming_funds_value">Budget (increasing)</option>
