2016 result data default for now

--- a/templates/results/results.html
+++ b/templates/results/results.html
@@ -63,7 +63,7 @@
                 <results-table selected-group="vm.selectedGroup" indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-table>
             </div>
             <div class="col-md-6">
-                <h4>Result data from {{vm.resultsYear.on ? vm.resultsYear.value : '2015 and 2016'}}</h4>
+                <h4>Result data from {{vm.resultsYear.on ? vm.resultsYear.value : '2016'}}</h4>
                 <results-chart indicators="vm.indicators" selected-indicators="vm.selectedIndicators"></results-chart>
             </div>
         </div>
