--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -46,7 +46,7 @@
                 class="filter-pop"
                 ng-click="vm.toggleOpenPanel('sdgs')" 
                 ng-class="{'active': vm.isOpenedHeader('sdgs')}"
-                ng-show="vm.isIncludedFilter('sdgs')"
+                ng-show="vm.isIncludedFilter('recipient_sdgs')"
                 ng-if="vm.pageName != 'sector'">
               SDG targets
             </span>
