--- a/templates/filters/filter-selection-box.html
+++ b/templates/filters/filter-selection-box.html
@@ -28,6 +28,19 @@
 						{{item.sector.name}}
 					</a>
 
+
+
+					<a 
+						class="selected filter-selected-button selectedSdgs" 
+						ng-repeat="item in vm.selectedSdgs" 
+						ng-click="vm.removeFilter(vm.selectedSdgs, 'sector', item.sector.code, true)" 
+						ng-if="vm.currentPage != 'sector'">
+						{{item.sector.name}}
+					</a>
+
+
+
+
 					<a 
 						class="selected filter-selected-button selectedImplementingOrganisations" 
 						ng-repeat="item in vm.selectedImplementingOrganisations" 
