--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -54,9 +54,8 @@
                     <div class="white no-margin-bottom no-padding-bottom">
                         <h3>Sustainable development goal contribution</h3>
                     </div>
-                    <div>
+                    <div class="sdg-icons">
                         <div
-                            class="sdg-icon"
                             ng-repeat="goalId in vm.sdg_targets" 
                             tooltips 
                             tooltip-class="sdg-tooltip zz_tooltip"
@@ -424,7 +423,6 @@
                 </div>
 
 
-
                 <div class="panel lightblue with-table">
 
                     <h3>Sustainable development goals</h3>
@@ -434,7 +432,7 @@
                             <tr>
                                 <th width="20%">SDG goal</th>
                                 <th width="60%">SDG target</th>
-                                <th width="20%">Percentage</th>
+                                <th width="20%">Relative importance</th>
                             </tr>
                         </thead>
                         <tbody>
