program level sdgs and country detail pie chart

--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -87,7 +87,7 @@
         <h4>Budget per country</h4>
       </div>
       <div class="col-sm-4 text-center">
-        <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund"></oipa-pie-chart>
+        <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="activity_count,incoming_fund" extra-filter="&sector_vocabulary=1"></oipa-pie-chart>
         <h4>Budget per sector</h4>
       </div>
   </div>
