--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -56,14 +56,16 @@
                     <oipa-pie-chart 
                         group-by="sector" 
                         aggregation-key="activity_count" 
-                        aggregations="activity_count,incoming_fund"></oipa-pie-chart>
+                        aggregations="activity_count,incoming_fund"
+                        extra-filter="&sector_vocabulary=1"></oipa-pie-chart>
                     <h4>Project distribution</h4>
                 </div>
                 <div class="col-sm-3 chart">
                     <oipa-pie-chart 
                         group-by="sector" 
                         aggregation-key="incoming_fund" 
-                        aggregations="activity_count,incoming_fund"></oipa-pie-chart>
+                        aggregations="activity_count,incoming_fund"
+                        extra-filter="&sector_vocabulary=1"></oipa-pie-chart>
                     <h4>Budget distribution</h4>
                 </div>
             </div>
