turn off sdg for live for now

--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -42,14 +42,14 @@
                 ng-if="vm.pageName != 'sector'">
               Sectors
             </span>
-            <span 
+            <!-- <span 
                 class="filter-pop"
                 ng-click="vm.toggleOpenPanel('sdgs')" 
                 ng-class="{'active': vm.isOpenedHeader('sdgs')}"
                 ng-show="vm.isIncludedFilter('recipient_sdgs')"
                 ng-if="vm.pageName != 'sector'">
               SDG targets
-            </span>
+            </span> -->
             <span 
                 class="filter-pop"
                 ng-click="vm.toggleOpenPanel('activity_status')" 
