--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -88,7 +88,7 @@
                         <financials-line-chart has-to-contain="related_activity_id"></financials-line-chart>
                     </div>
 
-                    <programme-sdgs has-to-contain="related_activity_id"></programme-sdgs>
+                    <!-- <programme-sdgs has-to-contain="related_activity_id"></programme-sdgs> -->
 
                 </div>
                 <div class="col-md-4">
