--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -51,7 +51,7 @@
                         <activity-geomap map-height="350px" activity="vm.activity"></activity-geomap>
                     </div>
 
-                   <!--  <div class="white no-margin-bottom no-padding-bottom">
+                    <div class="white no-margin-bottom no-padding-bottom">
                         <h3>Sustainable development goal contribution</h3>
                     </div>
                     <div class="sdg-icons">
@@ -68,7 +68,7 @@
                                  />
                         </div>
                         <span ng-if="vm.sdg_goal_ids.length == 0">Data to be added</span>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-md-4">
                     <div class="panel with-table lightblue">
@@ -422,7 +422,7 @@
 
                 </div>
 
-<!-- 
+ 
                 <div class="panel lightblue with-table">
 
                     <h3>Sustainable development goals</h3>
@@ -456,8 +456,6 @@
                     </div>
 
                 </div>
- -->
-
 
                 <div class="panel lightblue with-table">
                     <h3>Policy markers</h3>
